--- a/底层/单片机/中断.md
+++ b/底层/单片机/中断.md
@@ -24,7 +24,9 @@
 		b. 外部：
 			§ 常见的五种触发方式：
 			    IO口输入为高、IO口输入为低、IO口输入由高变为低、IO口输入由低变为高、IO口输入由高变低或者由低变高。
-	4. 简单单片机通过中断向量表来确定中断服务程序的位置。单片机将中断程序的位置填入到一个绝对地址中，当中断被触发时，绝对地址被读取，程序便会指向中断程序。高端CPU，提供一个公用中断向量地址，对中断进行编号，当相应的中断进入后，没有独立中断向量表的中断，会通过代码查表确定中断程序，再跳转到相应的中断程序。为解决中断相应速度，采用汇编查表的方法。
+	4. 简单单片机通过中断向量表来确定中断服务程序的位置。  
+       单片机将中断程序的位置填入到一个绝对地址中，当中断被触发时，绝对地址被读取，程序便会指向中断程序。
+       高端CPU，提供一个公用中断向量地址，对中断进行编号，当相应的中断进入后，没有独立中断向量表的中断，会通过代码查表确定中断程序，再跳转到相应的中断程序。为解决中断相应速度，采用汇编查表的方法。
 	5. 响应中断时需要保护现场，以便执行完中断程序后继续运行。
 	6. 中断存在优先级优先级
 		C51:
@@ -49,7 +51,6 @@
 外部设备以负跳变触发单片机中断，第一次中断请求外部设备的中断请求输出脚可以从高变低，触发单片机中断，第一次中断请求发生后中断请求脚保持输出低，外部设备无法产生第二次中断的触发负跳变信号。
 
 ![中断图1](/assets/中断图1.png)
-
 图1 外设只能产生一次中断请求信号示意图
 
 将外部设备的中断请求信号做出修改，原来为需要中断时只是输出从高到低变化，现在改为输出先从高变到低，经过一小段时间后自己从低变回高，这样就可以每次需要中断时都能向单片机输出负跳变触发信号。
