--- a/底层/单片机/中断.md
+++ b/底层/单片机/中断.md
@@ -1,7 +1,7 @@
 ## 总结：
 	1. 中断是单片机停下来去做另外一件事。
-	2. 中断需要有中断清除的操作，清中断标志位动作，一般都是在中断服务程序里面完成。有的单片机会自动清楚总中断标志位与响应中断标志位，有的不会。（32会吗）
-	51:
+	2. 中断需要有中断清除的操作，清中断标志位动作，一般都是在中断服务程序里面完成。有的单片机会自动清楚总中断标志位与响应中断标志位，有的不会。（32通过NVIC（内嵌向量中断控制器）来管理）
+		51:
 		○ 对于T0、T1的溢出中断：CPU响应后，会硬件清除中断请求标志TF0、TF1（自动撤除）
 		○ 对于边沿触发的int0、int1中断，自动撤除
 		○ 低电平触发的int0、int1中断，需要在响应之后撤除中断请求
@@ -11,7 +11,7 @@
 		a. 内部：
 			§ 常见的触发方式：
 			    时钟 Timer、串口UART、模数转换ADC等，通过相关寄存器的标志位置位触发。
-			§ 不同的单片机中断对应的寄存器不同，通常单片机中的中断存在一个总控制位。（32的中断寄存器）
+			§ 不同的单片机中断对应的寄存器不同，通常单片机中的中断存在一个总控制位。（32的中断寄存器由NVIC管理）
 				IE 中断的允许与禁止（地址A8h）
 				EA		ET2	ES	ET1	EX1	ET0	EX0
 				中断总开关	暂时不用	T2	串行口TXD	T1	int1	T0	int0
@@ -37,6 +37,7 @@
 		T1	1号定时器中断	P3.5	001bh
 		TI/RI	串行口中断	P3.1 TXD	0023h
 		32中断 优先级可自行设置
+	7. 关于单片机的中断详细配置，详见应用层中的单片机模块。
 
 
 
