--- a/底层/单片机/中断.md
+++ b/底层/单片机/中断.md
@@ -51,24 +51,24 @@
 
 外部设备以负跳变触发单片机中断，第一次中断请求外部设备的中断请求输出脚可以从高变低，触发单片机中断，第一次中断请求发生后中断请求脚保持输出低，外部设备无法产生第二次中断的触发负跳变信号。
 
-![中断图1](/assets/中断图1.png)
+![中断图1](../../assets/中断图1.png)
 图1 外设只能产生一次中断请求信号示意图
 
 将外部设备的中断请求信号做出修改，原来为需要中断时只是输出从高到低变化，现在改为输出先从高变到低，经过一小段时间后自己从低变回高，这样就可以每次需要中断时都能向单片机输出负跳变触发信号。
 
-![中断图2](/assets/中断图2.png)
+![中断图2](../../assets/中断图2.png)
 图2 外设可连续产生中断请求信号示意图一
 
 或者是由外部设备提供某种接口，单片机通过该接口可以对外部设备进行中断清除操作，中断清除操作可以让外部设备的中断请求输出脚恢复到高。
 
-![中断图3](/assets/中断图3.png)
+![中断图3](../../assets/中断图3.png)
 图3 外设可连续产生中断请求信号示意图二
 
 外部中断触发还有一些特殊方式，比如外部脉冲宽度测量、外部脉冲计数等，这些方式都是在前面几种基本触发方式上进行功能扩展得来的，外部脉冲宽度测量就是当 中断信号线跳变时会启动内部一个计时器，到下一次中断信号线跳变时通过计时器得到脉冲宽度并重新启动计时器，这些方式很少会使用到，不做详述。
 
 内部中断是指单片机内部的功能模块产生中断信号，只要是单片机内部在CPU外围能独立工作的功能模块都会提供中断功能，常见的内部中断类型有时钟 Timer、串口UART、模数转换ADC等。内部中断的工作流程和外部中断没太多区别，只是中断请求信号是在单片机内部进行传输，中断信号不是管脚上的 电平状态，而是一个寄存器里面的相应标志位，通常当某个内部中断产生中断请求时就会将相应标志位置为1，CPU响应中断时将这个标志位清0。
 
-![中断图4](/assets/中断图4.png)
+![中断图4](../../assets/中断图4.png)
 图4 内部中断触发示意图
 
 单片机对中断标志位的处理方法没有统一标准，具体的约定方法要看单片机文档。大部分是标志位为1有中断产生，但有少数单片机是标志位为0有中断产生；有的单片机对中断标志位是CPU写入什么就给改写成什么，有的则是规定必须通过写1或写0来实现清除操作，还有少数只要读一下中断标志位就会自动清除掉该标志位。
@@ -85,32 +85,32 @@
 
 虽然中断服务程序的大小和在整个程序中的位置会不固定，但程序只要被烧进单片机系统，对于这个程序来说其中断服务程序的大小和在整个程序中的位置就会被固定 下来，如果对单片机程序空间分配我们做出一些约定，将一个绝对固定地址专门分配给中断使用，程序编译时会将中断服务程序的起始地址（或者是跳转到中断服务 程序的指令）填到这个绝对固定地址所在的空间，当中断产生时候，单片机先将绝对固定地址所在位置里面的内容读出，根据所读内容就可以跳转到中断服务程序。
 
-![中断图5](/assets/中断图5.png)
+![中断图5](../../assets/中断图5.png)
 图5 中断响应示意图
 
 简单的单片机所提供的中断种类有限，为了简化程序，会给每一个中断分配一个用来存放中断服务程序地址的地址空间，这种方法其实没什么不好的地方，只是单片机 技术发展到现在遇到了瓶颈，高端单片机越来越复杂，于是一些专业厂商开始合作共享技术资源，例如ARM公司利用他们在CPU架构体系上的技术优势专门给另 外的厂商提供CPU内核，另外的厂商在ARM内核的CPU外围增加功能模块，这些功能模块大都支持中断。
 
-![中断图6](/assets/中断图6.png)
+![中断图6](../../assets/中断图6.png)
 图6 ARM内核单片机架构图
 
 不同厂家在相同CPU内核基础上设计出来的单片机外围的功能模块会各不相同，从而中断的种类和个数也各不相同，而CPU处理中断的方法是一样的，如果延续简单的单片机给每个中断都分配一个地址空间的做法显然有问题，CPU无法知道到底有多少种中断需要支持，这些中断又分别对应什么模块，于是采用另外一种中断处理方法，将所有中断地址都指向同一个，并将所有中断依次编号，中断产生时候CPU会告诉中断服务程序当前中断编号是多少，然后中断服务程序根据中断编号 做出相应响应。
 
-![中断图7](/assets/中断图7.png)
+![中断图7](../../assets/中断图7.png)
 图7 公用中断入口中断响应流程图
 
-![中断图8](/assets/中断图8.png)
+![中断图8](../../assets/中断图8.png)
 图8 独立中断入口中断响应流程图
 
 所有中断使用同一个中断向量地址，然后通过中断号判断中断类别的方法虽然解决了通用CPU内核中断不能直接对应中断向量地址的问题，但把它中断处理的流程和具有独立中断向量表的单片机相比就会发现：中断的响应速度会变慢。具有独立中断向量表的单片机只要一条跳转指令就可以直接进入中断程序，而没有独立中断向量表的单片机需要先跳转到中断公共入口，然后通过代码判定中断类别，确定中断类别后才跳转到真正的中断程序中去。C语言的代码会让这种情况更加恶化，所以如果是没有独立中断向量表的单片机一般采用汇编查表的方法加快中断响应速度。
 
-![中断图9](/assets/中断图9.png)
+![中断图9](../../assets/中断图9.png)
 图9 汇编中断快速跳转表
 
 中断程序执行完毕后回返回继续执行主程序，这样就要求中断不改变主程序的运行状态，所以中断响应时需要将程序当前运行的状态信息保存起来，比如程序运行到什 么位置、当前CPU状态寄存器的状态等信息。当中断程序执行完毕，可以通过这些信息将CPU状态寄存器恢复原来状态，并能返回原程序继续执行。不同的单片机对此的处理方式也会有不同，一种是完全由硬件来完成，并不需要程序来进行管理；另外一种是将状态信息用相应指令保存在特定位置，返回时再用相应指令恢复原来状态。
 
 单片机中断还有中断优先级和中断嵌套的概念，但不是所有的单片机都会支持这两种功能。中断优先级是不同的中断会有不同的优先级别，如果同时有两个中断产生，单片机会先响应优先级高的中断。中断嵌套是指在中断响应当中又有新的中断产生，单片机可以暂停当前的中断程序执行去响应新的中断，新中断程序执行完以后在接着执行当前中断程序。一般中断嵌套是高优先级的中断可以插入低优先级中断响应程序，同级或低级的中断不能插入当前中断响应程序。
 
-![中断图10](/assets/中断图10.png)
+![中断图10](../../assets/中断图10.png)
 图10 中断嵌套示意图
 
 中断步骤说明
