--- a/硬件层/基础电路知识与元器件/常见电路.md
+++ b/硬件层/基础电路知识与元器件/常见电路.md
@@ -1,2 +1,14 @@
 ## 电平转换电路
-![电平转换1](../../assets/电平转换1.png)
+![硬件_电平转换1](../../assets/硬件_电平转换1.png)
+
+![硬件_电平转换2](../../assets/硬件_电平转换2.png)
+
+![硬件_电平转换1](../../assets/硬件_电平转换1.png)
+
+![硬件_SIM卡应用电路](../../assets/硬件_SIM卡应用电路.png)
+
+## 自动开关机电路
+
+![硬件_三极管开关电路](../../assets/硬件_三极管开关电路.png)
+
+![硬件_单片机控制开关电路](../../assets/硬件_单片机控制开关电路.png)
