--- a/硬件层/基础电路知识与元器件/常见电路.md
+++ b/硬件层/基础电路知识与元器件/常见电路.md
@@ -13,5 +13,5 @@
 
 ![硬件_三极管开关电路](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210216161536.png)
 
-![硬件_单片机控制开关电路](assets/20210216160027.png)
+![硬件_单片机控制开关电路](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210216161822.png)
 
