--- a/C语言/大小端.md
+++ b/C语言/大小端.md
@@ -2,7 +2,10 @@
 + 在说大小端之前，要先提一下字节顺序（Endianness），它是描述数据以字节为一组在计算机内存中存储顺序的术语。 字节顺序可以是大端顺序（big-endian）或者小端顺序（little-endian）；在对多字节数据进行存储时，一般遵循以下规则；
 
 + 小端：数据的最后一个字节先存储，即LSB；
+
 + 大端：数据的第一个字节先存储，即MSB；
+
+  ![微信图片_20210216174953](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210216175021.jpg)
 
 **在通讯中，例如网络编程：假设在小端机器上向文件写入整数，然后将此文件传输到大端机器上。如果没有做大小端转换，那么大端机器就会以相反的顺序读取文件。**
 
