--- a/应用层/操作系统/RTOS/2、任务.md
+++ b/应用层/操作系统/RTOS/2、任务.md
@@ -5,4 +5,18 @@
 带有独立内存运行空间的叫做进程，例如通常编写的C程序，在运行时，它在内存中的实体级就叫做进程。
 **线程**：
 多个运行程序共用一个内存空间，它们整体叫做进程，而这里面的单个实体则叫做线程。
+
 + UCOSII中并没有给任务分配单独运行的空间，所以他所有的任务都公用一个内存空间，一个任务则是一个线程！！！
+
+
+
+### 任务状态
++ 睡眠状态（在宿舍睡觉，啥都不能做，起来了就上路了）没有被分配任务控制块或被剥夺了任务控制块
++ 就绪状态（在路上的状态，可以前往教室或者前往寝室睡觉）在任务就绪表中国进行了就绪登记
++ 运行状态（在教室上课，上完课可以直接上路，也可以直接飞到寝室睡觉，同时也可以去中转站等待，看看是飞去睡觉还是走路回去）就绪状态获得CPU使用权则转入运行,任何时刻只能有一个任务,
++ 中断服务状态（在上课被叫出去做事,做完再回来）执行中断服务程序
++ 等待状态(在此处进行中转,看看是飞到寝室还是走路)正在运行的任务需要等待一段时间或者等待一个事件触发,交出CPU使用权,进入等待.
+
+### 任务堆栈
+在存储器中按照后进先出的原则的连续存储空间.满足任务切换和响应中断时保存CPU寄存器钟的内容以及任务调用其他函数时需要.每个任务都有自己的堆栈.所有ucosII都含有一个指向盖任务堆栈的指针.
+堆栈增长方向在不同的处理器中不同,任务堆栈需要初始化,此函数也需要根据不同的机器来编写.
