--- a/应用层/HC32/编程注意事项.md
+++ b/应用层/HC32/编程注意事项.md
@@ -1,4 +1,4 @@
-## 编程注意事项（选至用户手册）
+## 编程注意事项（选自用户手册）
 1. 中断优先级寄存器的编程应该在中断使能之前，其通常是在程序开始时完成的。应该避免在中断使能之后改变中断优先级，这种情况的结果不可预知，并且不被     Cortex-M0+ 处理器支持。 
 2. 芯片复位后端口配置为高阻输入 
 3. 为了避免高阻输入而产生的漏电，用户要在芯片启动之后对端口进行相应的配置（配置成内部上拉/下拉输入或者输出）。 
