--- a/2-1 C语言/1-3.2动态内存分配实例.md
+++ b/2-1 C语言/1-3.2动态内存分配实例.md
@@ -2,7 +2,97 @@
 
 `摘自C和指针`
 
+` 错误检查分配器接口`
+
+```c
+#include <stdlib.h>
+
+#define malloc 
+#define MALLOC(num,type) (type *)alloc((num) * sizeof(type))
+extern  void *alloc(size_t size);
 ```
 
+` 错误检查分配器实现`
+
+```c
+#include <stdio.h>
+#include "alloc.h"
+#undef  malloc
+
+void *alloc(size_t size)
+{
+    void    *new_nem;
+    new_nem = malloc(size);
+    if (new_nem == NULL){
+        printf("out of memory!\n");
+        exit(1);
+    }
+    return new_nem;
+}
+```
+
+`排序一列整型值`
+
+```c
+/*
+**读取、排序和打印一列整型值
+*/
+#include "stdio.h"
+#include "alloc.h"
+
+/*
+**该函数由‘qsort’调用，用于比较整型值
+*/
+int compare_integers(void const *a,void const*b)
+{
+    register int const *pa = a;
+    register int const *pb = b;
+
+    return *pa > *pb ? 1 : *pa < *pb ? -1 : 0;
+}
+
+int main(){
+    int *array;
+    int n_values;
+    int i;
+    /*
+    **观察有多少个值
+    */
+    printf("How many values are there?\n");
+    if(scanf("%d",&n_values) != 1 || n_values <= 0)
+    {
+       printf("Illegal number of values .\n");
+       exit(EXIT_FAILURE);
+    }
+
+   /*
+   **分配内存，用于存储这些值 
+   */
+    array = MALLOC(n_values,int);
+
+   /*
+   **读取这些值
+   */    
+    for ( i = 0; i < n_values; i++ )
+    {
+        printf("?");
+        if(scanf("%d",array + i) != 1){
+            printf("Error reading value #%d\n",i);
+            free(array);
+            exit(EXIT_FAILURE);
+        }
+    }
+
+    /*
+    **对这些值进行排序
+    */
+   qsort(array, n_values, sizeof( int ),compare_integers );
+   for ( i = 0; i < n_values; i++ )
+   {
+        printf("%d\n",array[i]);
+   }
+   free(array);
+   return EXIT_SUCCESS;
+}
 ```
 
