--- a/1-3 应用层/计算机&操作系统/计算机基础知识/2、目标文件结构.md
+++ b/1-3 应用层/计算机&操作系统/计算机基础知识/2、目标文件结构.md
@@ -7,3 +7,28 @@
 + .data段：**存放已经初始化的非零的全局变量、全局静态变量和局部静态变量。**
 + .bss段：**存放未初始化的全局变量、全局静态变量和局部静态变量。有的编译器会将全局未初始化变量存放在其中，有的则不存放，值预留一个未定义的全局变量符号，等到最终链接成可执行文件的时候在在.bss段分配空间**。**（编译器优化，会把初始化为零的全局变量存入.bss中）**
 + .rodata段（只读数据段）：**存放只读数据，一般是程序中的只读变量（如const修饰的变量）和字符串常量。**有时候编译器会把字符串常量放到“.data段”，而不会单独的放在“.rodata”。
+
+## ELF文件结构描述（LINUX可执行文件）
+
+|ELF Header | 文件头，包含描述整个文件的基本属性，比如ELF文件版本、目标机器型号、程序入口地址等|
+|---|-----|
+|.text| |
+|.data| |
+|.bss| |
+|...| |
+|other sections | |
+|section header table|段表，描述了ELF文件包含的所有段的信息，如段名、段长、在文件中的便宜、读写权限及段的其他属性|
+|String Tables| 字符串表|
+|Symbol Tables| 符号表|
+
++ ELF文件的段结构就是由段表来决定的，编译器、链接器、装载器都是靠段表来定位和访问各个段的属性的。
++ 字符串表：因为字符串的长度往往是不定的，用固定结构表示它比较困难。常见做法是把字符串集中起来存放到一个表然后使用字符串在表中的便宜来引用字符串。
+
+## 链接的接口----符号
+
+目标文件之间相互拼合实际上是目标文件之间对地址的引用，即对函数和变量的地址的引用。
+
++ 在链接中，我们将函数和变量统称为符号(Symbol)，函数名和变量名就是符号名（Symbol Name）。
++ 每个目标文件都有一个符号表（Symbol Table）,每个定义的符号有一个对应的值，叫做符号值，对于变量和函数来说，符号值就是他们的地址。
++ 函数签名：C++重载函数，每个函数都拥有不同的函数签名，会被编译器转换为不同的符号名，于是便能一一对应，进行重载。
+
