--- a/2-1 C语言/1-4 使用结构和指针.md
+++ b/2-1 C语言/1-4 使用结构和指针.md
@@ -6,7 +6,7 @@
 
 存在一个根指针，指向第一个链表。
 
-`单链表插入`
+`有序单链表插入`
 
 ```c
 #include <stdio.h>
@@ -49,6 +49,171 @@ int sll_insert(register Node **linkp,int new_value)
     new->link = current;
     *linkp = new;
     return TRUE;
+}
+```
+
+## 双链表
+
+有两个根指针，一个指向链表的第一个节点，另一个指向最后一个节点。
+
+**有序双链表插入**
+
+一个有四种情况：
+
+1. 新值可能必须插入到链表的中间位置。
+2. 新值可能必须插入到链表的起始位置。
+3. 新值可能必须插入到链表的结束位置。
+4. 新值可能必须插入到链表的起始位置，又插入到链表的结束位置（空链表）。
+**一共需要操纵四个指针**
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+#define FALSE 0
+#define TRUE  1
+
+typedef struct NODE{
+       struct NODE *fwd;
+       struct NODE *bwd;
+       int         value;
+} Node;
+
+/*
+**把一个值插入到一个双链表，rootp是一个指向根节点的指针，
+**value是欲插入的新值。
+**返回值：如果欲插入的心智原先已存在于链表中，函数返回0；
+**如果内存不足倒置无法插入，函数返回-1；如果插入成功函数返回1
+*/
+int dll_insert(Node *rootp,int value)
+{
+    Node *this;
+    Node *next;
+    Node *newnode;
+
+    /*
+    **查看value是否已经存在于链表中，如果是就返回。
+    **否则，为新值创建一个新的节点（“newnode”将指向它）
+    **“this”将指向应该在新节点之前的那个节点
+    **“next”将指向应该在新节点之后的那个节点
+    */
+    for(this = rootp;(next = this->fwd) != NULL;this = next) {
+        if(next->value == value)
+            return 0;
+        if(next->value > value)
+            break;
+   }
+    newnode = (Node*)malloc(sizeof(Node));
+    if(newnode == NULL)
+        return -1;
+    newnode->value = value;
+
+    /* 
+    **把新值添加到链表中
+    */
+    if(next != NULL){
+        /*
+        **情况1或情况2
+        */
+        if(this != rootp){      /*情况1：并非位于链表起始位置*/
+            newnode->fwd = next;
+            this->fwd = newnode;
+            newnode->bwd = this;
+            next->bwd = newnode;
+        }
+        else{                   /*情况2：位于链表起始位置*/
+            newnode->fwd = next;
+            rootp->fwd = newnode;
+            newnode->bwd = NULL;
+            next->bwd = newnode;
+        }
+    }
+    else{
+         /*
+         **情况3或4：位于链表的尾部
+         */
+        if(this != rootp){      /*情况3：并非位于链表的起始位置*/
+            newnode->fwd = NULL;
+            this->fwd = newnode;
+            newnode->bwd = this;
+            rootp->bwd = newnode;
+        }
+        else{                   /*情况4：位于链表的起始位置*/
+            newnode->fwd = NULL;
+            rootp->fwd = newnode;
+            newnode->bwd = NULL;
+            rootp->bwd = newnode;
+        }
+    }
+    return 1;
+}
+```
+
+
+
+`代码逻辑优化`
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+#define FALSE 0
+#define TRUE  1
+
+typedef struct NODE{
+       struct NODE *fwd;
+       struct NODE *bwd;
+       int         value;
+} Node;
+
+/*
+**把一个值插入到一个双链表，rootp是一个指向根节点的指针，
+**value是欲插入的新值。
+**返回值：如果欲插入的心智原先已存在于链表中，函数返回0；
+**如果内存不足倒置无法插入，函数返回-1；如果插入成功函数返回1
+*/
+int dll_insert(Node *rootp,int value)
+{
+    Node *this;
+    Node *next;
+    Node *newnode;
+
+    /*
+    **查看value是否已经存在于链表中，如果是就返回。
+    **否则，为新值创建一个新的节点（“newnode”将指向它）
+    **“this”将指向应该在新节点之前的那个节点
+    **“next”将指向应该在新节点之后的那个节点
+    */
+    for(this = rootp;(next = this->fwd) != NULL;this = next) {
+        if(next->value == value)
+            return 0;
+        if(next->value > value)
+            break;
+   }
+    newnode = (Node*)malloc(sizeof(Node));
+    if(newnode == NULL)
+        return -1;
+    newnode->value = value;
+
+    /* 
+    **把新值添加到链表中
+    */
+    newnode->fwd = next;
+    this->fwd = newnode;
+
+    if(this != rootp){      /*情况1：并非位于链表起始位置*/  
+        newnode->bwd = this;
+    }
+    else{                   /*情况2：位于链表起始位置*/
+        newnode->bwd = NULL;
+    }
+    if(next != NULL){
+        next->bwd = newnode;
+    }
+    else{
+        rootp->bwd = newnode;
+    }
+    
+    return 1;
 }
 ```
 
