--- a/2-1 C语言/1-5 高级指针话题.md
+++ b/2-1 C语言/1-5 高级指针话题.md
@@ -47,7 +47,7 @@ int compare_ints(void const *a,void const *b)
 
 **转换表就是函数指针数组**
 
-使用得当可以用一句话替换很长的switch case语句。
+使用得当可以用一句话替换很长的switch case语句（这些函数需要有相同的原型）。
 
 ```c
 double add(  double, double );
@@ -69,3 +69,51 @@ result = oper_func[ oper ]( op1, op2 )
 
 ## 命令行参数
 
+参数在程序启动时传入程序，程序按照它认为合适的方式对他们进行处理。
+
+### 传递命令行参数
+
+一般情况下，C程序main有两个形参，第一个通常称为argc，它表示命令行参数的数目。第二通常称为argv,它指向一组参数值。
+
+```c
+int main( int argc, char **argvc)
+```
+
+argv指向数组的第一个元素，数组的元素是char*的指针。
+
+第一个参数一般是程序的名称。
+
+### 处理命令
+
+LINUX系统中的命令参数，就是基于此编写而成，只需要做出判断，执行相对应的语句即可。
+
+
+
+## 字符串常量
+
+**当一个字符串常量出现在表达式中，它的值是个指针常量，，编译器把这些指定字符的一份拷贝存储在内存的某个位置，并存储一个指向第一个字符的指针。所以，进一步的，”xyz“[2]  的值为z**
+
+
+
+**用处：**
+
+```c
+#include "stdio.h"
+
+void binary_to_ascii( unsigned int value)
+{
+    unsigned int quotient;
+    quotient = value / 16;
+    if( quotient != 0)
+        binary_to_ascii( quotient );
+	putchar("0123456789ABCDEF"[value % 16]);
+}
+
+void main() {
+    unsigned BinaryNum;
+    scanf("%d", &BinaryNum);
+    binary_to_ascii(BinaryNum);
+}
+```
+
+一行代码**putchar("0123456789ABCDEF"[value % 16]);**完成余数转换。代码功能：将输入的整数转换为16进制后通过字符输出！
