--- a/1-3 应用层/计算机&操作系统/计算机基础知识/2、目标文件结构.md
+++ b/1-3 应用层/计算机&操作系统/计算机基础知识/2、目标文件结构.md
@@ -32,3 +32,10 @@
 + 每个目标文件都有一个符号表（Symbol Table）,每个定义的符号有一个对应的值，叫做符号值，对于变量和函数来说，符号值就是他们的地址。
 + 函数签名：C++重载函数，每个函数都拥有不同的函数签名，会被编译器转换为不同的符号名，于是便能一一对应，进行重载。
 
+## 弱符号与强符号
+
+对于C/C++来说，编译器默认函数和初始化了的全局白能量为强符号，未初始化的全局变量为弱符号。
+
++ 规则1：不允许强符号被多次定义
++ 规则2：如果一个符号在某个目标文件中是强符号，在其他文件中是弱符号，那么选择强符号。
++ 规则3：如果一个符号在所有目标文件中都是弱符号，那么选择占用空间最大的一个。
