--- a/2-1 C语言/1-2 结构体.md
+++ b/2-1 C语言/1-2 结构体.md
@@ -20,7 +20,22 @@ typedef struct {
 TIME x;
 TIME y[10],*z;
 ```
+3. 更多用法
+
+```c
+typedef struct TIME {
+	int hour;
+	float min;
+	double sec;
+}* Ptime,time;
+//等价于time代表了struct TIME ,ptime代表了struct TIME*
+//如果结构体内没有指针，TIME则可以省略
+```
+
+
+
 ### 结构体访问
+
 两种访问方式
 直接 
 struct TIME time;
