--- a/2-1 C语言/2-2 链表创建与遍历.md
+++ b/2-1 C语言/2-2 链表创建与遍历.md
@@ -1,6 +1,7 @@
 ```c
 #include <stdio.h>
 #include "alloc.h"
+#include <stdbool.h>
 
 typedef struct Node
 {
@@ -10,6 +11,11 @@ typedef struct Node
 
 void traverse_list(PNODE pHead);
 PNODE create_list();
+bool is_empty(PNODE pHead);
+int length_list(PNODE pHead);
+bool insert_list(PNODE pHead,int,int);
+bool delete_list(PNODE pHead,int,int *);
+void soert_list(PNODE pHead);
 
 int main(void)
 {
@@ -17,8 +23,13 @@ int main(void)
 	
 	pHead = create_list();//创建一个非循环单链表，并且将头节点的地址给pHead
 	traverse_list(pHead);//遍历链表
-
+	printf("链表的长度为%d\n",length_list(pHead));
+/*	if(is_empty(pHead))
+		printf("链表为空\n");
+	else
+		printf("链表不为空\n");
 	return 0;
+*/
 }
 
 PNODE create_list()
@@ -60,6 +71,25 @@ void traverse_list(PNODE pHead)
 	}
 	printf("\n");
 	return ;
+}
+
+bool is_empty(PNODE pHead)
+{
+	if(pHead->pNext == NULL)
+		return true;
+	else
+		return false;
+}
+
+int length_list(PNODE pHead)
+{
+	int count = 0;
+	while(pHead->pNext != NULL)
+	{
+		count++;
+		pHead = pHead->pNext;
+	}		
+	return count;
 }
 
 ```
