--- a/1-3 应用层/计算机&操作系统/RTOS/1-2 任务.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/1-2 任务.md
@@ -17,6 +17,8 @@
 + 中断服务状态（在上课被叫出去做事,做完再回来）执行中断服务程序
 + 等待状态(在此处进行中转,看看是飞到寝室还是走路)正在运行的任务需要等待一段时间或者等待一个事件触发,交出CPU使用权,进入等待.
 
+![image-20210427103024078](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210427103033.png)
+
 ### 任务堆栈
 在存储器中按照后进先出的原则的连续存储空间.满足任务切换和响应中断时保存CPU寄存器钟的内容以及任务调用其他函数时需要.每个任务都有自己的堆栈.所有ucosII都含有一个指向盖任务堆栈的指针.
 堆栈增长方向在不同的处理器中不同,任务堆栈需要初始化,此函数也需要根据不同的机器来编写.
