--- a/2-1 C语言/2-3 链表数组冒泡排序算法.md
+++ b/2-1 C语言/2-3 链表数组冒泡排序算法.md
@@ -2,6 +2,12 @@
 核心思想：for只是用来计数的，想象每一个都往下沉，所以每次循环必须回到起点，每循环一次，次数就要少一次。
 `链表版本`
 ```c
+typedef struct Node
+{
+	int data;
+	struct Node *pNext;
+}NODE,*PNODE;
+
 void soert_list(PNODE pHead)
 {
 	int i,j,length;
