--- a/1-3 应用层/计算机&操作系统/RTOS/2-2 任务设计.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2-2 任务设计.md
@@ -32,3 +32,58 @@
 
 ## 任务优先级安排
 
++ 中断关联性：与中断服务程序有关联的任务尽可能高
++ 紧迫性：对响应时间有要求
++ 关键性
++ 频繁性
++ 快捷性:在前面各项相近，耗时较少的任务可以安排高一点优先级
++ 传递性：信息传递的上游任务优先级高于下级任务
+
+**优先级安排比较宽松时，新增任务就比较方便，在不改变现有优先级的情况下，很容易更具需要找到一个合适的空闲任务。**
+
+## 任务函数设计中的问题
+
+### 公共函数的调用
+
+如果一个任务正在调用某个公共函数，被高优先级任务打断，则很有可能会破坏原任务的数据。通常采取两种措施：**互斥调用和可重入设计。**
+
++ 互斥调用：将公共函数作为一种共享资源，如果执行时间段，则可关中断或者关调度，再调用公共函数。否则需要配备一个互斥信号量。
++ 可重入设计：公共函数不适用全局资源，所有变量均为局部变量。同时可重入函数中的调用的其他函数也应该为可重入函数。
+
+### 与其他任务的协调
+
+采用操作系统提供的同步和通信机制来进行任务之间的协调运行。详见后续的行为同步章节。
+
+### 共享资源的访问
+
+任务应该要保护共享资源不被破坏，详细见后续资源同步章节。
+
+### 与其他任务进行数据通信
+
+各个任务，中断之间必然伴随数据通信，操作系统中有多种方法实现，如何选择最合适的通信方式，详细见后续数据通信章节。
+
+## 任务函数的代码设计过程
+
+凡是操作系统提供了的服务功能，必须调用相应的服务函数，使用自己定义的服务函数是很冒险的。
+
+任务之间不仅有数据流动，还有行为互动，而且互动之间的作用是通过操作系统的服务来实现的。
+
+### 系统钟体关联图
+
+一个任务代码的色痕迹过程是**重上到下**的，我们首先需要知道各个任务再系统中的位置和角色，再将一个个任务进行详细关联分析，画出任务流程图，再按照流程图编写代码。
+
+完成了任务的划分之后，就必须把这些任务之间的相互关系搞清楚，可以使用总体任务关联图来表示各个任务（ISR）之间的相互关系。
+
+例：
+
+![image-20210429160333028](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210429160341.png)
+
+### 任务关联分析
+
+任务函数一个个编写，每一个都必须非常清楚地掌握它与其他任务的关系。一般有两种关系，行为同步关系，资源同步关系。
+
+一个是需要考虑它与其他任务的制约与控制，一个是需要考虑与其他任务的数据交互。
+
+### 任务的程序流程图
+
+复杂的应用必须要画出程序流程图，简单的可以直接编写。
