--- a/2-1 C语言/2-5 队列.md
+++ b/2-1 C语言/2-5 队列.md
@@ -12,11 +12,13 @@
 
 ## 循环队列入队伪算法
 
+**插入值时，队尾指针：r=(r+1)%数组的长度。**
+
 
 
 ## 循环队列出队伪算法
 
-
+**出队时，队首指针：f=(f+1)%数组的长度。**
 
 ## 如何判断循环队列为空
 
@@ -24,3 +26,10 @@
 
 ## 如何判断循环队是否已满
 
+(r+1)%数组长度 == f
+
+
+
+## 队列应用
+
+所有和时间有关的都与队列有关。
