--- a/1-2 底层/单片机通用知识/寄存器.md
+++ b/1-2 底层/单片机通用知识/寄存器.md
@@ -2,3 +2,101 @@
 
 一般单片机编程，寄存器都被定义好了放在头文件中，比如，51单片机中存放在#include<reg51.h>(编译器弄好了，我们不需要手动天添加该文件，只需要声明即可),stm32则存放在#include"stm32f10x.h"。
 
+## 寄存器映射
+
+​	在图 STM32F10xx 系统框图 中，被控单元的 FLASH， RAM， FSMC 和 AHB 到 APB 的桥（即片上外设），这些功能部件共同排列在一个 4GB 的地址空间内。我们在编程的时候，可以通过他们的地址找到他们，然后来操作他们（通过 C 语言对它们进行数据的读和写）。         	
+
+​	存储器本身不具有地址信息，它的地址是由芯片厂商或用户分配，给存储器分配地址的过程就称为存储器映射，具体见图存储器映射。如果给存储器再分配一个地址就叫存储器重映射。  ==就是给寄存器编门牌号。==
+
+## 存储器区域功能划分  
+
+在这 4GB 的地址空间中， ARM 已经粗线条的平均分成了 8 个块，每块 512MB，每个块也都规定了用途，具体分类见表格存储器功能分类。每个块的大小都有 512MB，显然这是非常大的，芯片厂商在每个块的范围内设计各具特色的外设时并不一定都用得完，都是只用了其中的一部分而已。
+
+![image-20210506175316018](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210506175317.png)
+
+在这 8 个 Block 里面，有 3 个块非常重要，也是我们最关心的三个块。 Block0 用来设计成内部FLASH， Block1 用来设计成内部 RAM， Block2 用来设计成片上的外设，下面我们简单的介绍下这三个 Block 里面的具体区域的功能划分 。
+
+### 存储器 Block0 内部区域功能划分  
+
+![image-20210506175434131](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210506175435.png)
+
+### 储存器 Block2 内部区域功能划分  
+
+![image-20210506175509486](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210506175510.png)
+
+## C语言对寄存器的封装
+
+### 封装总线和外设基地址  
+
+总线基地址和外设基地址都以相应的宏定义起来，总线或者外设都以他们的名字作为宏名  。
+
+```c
+/* 外设基地址 */
+ #define PERIPH_BASE ((unsigned int)0x40000000)
+
+/* 总线基地址 */
+#define APB1PERIPH_BASE PERIPH_BASE
+#define APB2PERIPH_BASE (PERIPH_BASE + 0x00010000)
+#define AHBPERIPH_BASE (PERIPH_BASE + 0x00020000)
+
+/* GPIO 外设基地址 */
+#define GPIOA_BASE (APB2PERIPH_BASE + 0x0800)
+#define GPIOB_BASE (APB2PERIPH_BASE + 0x0C00)
+#define GPIOC_BASE (APB2PERIPH_BASE + 0x1000)
+#define GPIOD_BASE (APB2PERIPH_BASE + 0x1400)
+#define GPIOE_BASE (APB2PERIPH_BASE + 0x1800)
+#define GPIOF_BASE (APB2PERIPH_BASE + 0x1C00)
+#define GPIOG_BASE (APB2PERIPH_BASE + 0x2000)
+
+/* 寄存器基地址，以 GPIOB 为例 */
+#define GPIOB_CRL (GPIOB_BASE+0x00)
+#define GPIOB_CRH (GPIOB_BASE+0x04)
+#define GPIOB_IDR (GPIOB_BASE+0x08)
+#define GPIOB_ODR (GPIOB_BASE+0x0C)
+#define GPIOB_BSRR (GPIOB_BASE+0x10)
+#define GPIOB_BRR (GPIOB_BASE+0x14)
+#define GPIOB_LCKR (GPIOB_BASE+0x18)
+```
+
+但是这样子还是有点麻烦，可以利用C语言的结构体，来进一步简化代码。
+
+```c
+typedef unsigned int uint32_t; /* 无符号 32 位变量 */
+typedef unsigned short int uint16_t; /* 无符号 16 位变量 */
+
+/* GPIO 寄存器列表 */
+typedef struct {
+uint32_t CRL; /*GPIO 端口配置低寄存器 地址偏移: 0x00 */
+uint32_t CRH; /*GPIO 端口配置高寄存器 地址偏移: 0x04 */
+uint32_t IDR; /*GPIO 数据输入寄存器 地址偏移: 0x08 */
+uint32_t ODR; /*GPIO 数据输出寄存器 地址偏移: 0x0C */
+uint32_t BSRR; /*GPIO 位设置/清除寄存器 地址偏移: 0x10 */
+uint32_t BRR; /*GPIO 端口位清除寄存器 地址偏移: 0x14 */
+uint16_t LCKR; /*GPIO 端口配置锁定寄存器 地址偏移: 0x18 */
+} GPIO_TypeDef;
+```
+
+==原理如下:==
+
+![image-20210506180642485](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210506180643.png)
+
+这样我们就可以定义一个结构体指针，指向这个结构体，操作更加方便。同时我们更进一步，直接使用宏定义好 GPIO_TypeDef 类型的指针，而且指针指向各个 GPIO端口的首地址 。
+
+以GPIOB为例：
+
+```c
+#define GPIOB ((GPIO_TypeDef *) GPIOB_BASE)
+
+/* 使用定义好的宏直接访问 */
+/* 访问 GPIOB 端口的寄存器 */
+GPIOB->BSRR = 0xFFFF; //通过指针访问并修改 GPIOB_BSRR 寄存器
+GPIOB->CRL = 0xFFFF; //修改 GPIOB_CRL 寄存器
+GPIOB->ODR =0xFFFF; //修改 GPIOB_ODR 寄存器
+```
+
+
+
+
+
+
+
