--- a/1-2 底层/单片机通用知识/移植.md
+++ b/1-2 底层/单片机通用知识/移植.md
@@ -1,13 +1,62 @@
-## STM32不同芯片之间裸机程序移植
-### 整体文件系统架构，各个问价作用（库函数）
+# STM32不同芯片之间裸机程序移植
+
+
+## 标准库文件架构--基础文件（启动等等）
+
+![image-20210506192714163](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210506192715.png)
+
+### 内核相关文件
+
+**Core_cm3.h** 头文件里面实现了内核的寄存器映射，对应外设头文件 stm32f10x.h，区别就是一个针对内核的外设，一个针对片上
+（内核之外）的外设。**core_cm3.c** 文件实现了一下操作内核外设寄存器的函数，用的比较少。  
+
+同时再core_cm3.h中有“stdint.h”这个头文件  ，主要作用是提供一些类型定义，所以这里面和C语言编译器是相通的。==**这些新类型定义屏蔽了在不同芯片平台时，出现的诸如 int 的大小是 16 位，还是 32 位的差异（这就是CMSIS的作用，屏蔽这种细节）**==。所以在我们以后的程序中，都将使用新类型如 uint8_t 、uint16_t 等。在稍旧版的程序中还经常会出现如 u8、 u16、 u32 这样的类型，分别表示的无符号的 8 位、 16 位、32 位整型。初学者碰到这样的旧类型感觉一头雾水，它们定义的位置在 STM32f10x.h 文件中。建议在以后的新程序中尽量使用 uint8_t 、 uint16_t 类型的定义。  
+
+### 启动文件
+
+需要根据不同单片机的FLAH和RAM选择即可，详细描述请看Stm32目录下启动流程文件。
+
+### Stm32f10x.h  
+
+片上外设的所以寄存器的映射，是一个非常重要的头文件，在内核中与之想对应的头文件是 core_cm3.h  
+
+### system_stm32f10x.c
+
+其中有一个非常重要的函数：SystemInit（上电之后在启动文件夹里会调用这个函数，调用完之后，系统的时钟就被初始化成 72M  ） 。system_stm32f10x.c 文件实现了 STM32 的时钟配置，操作的是片上的 RCC 这个外设 。如果需要修改时钟配置，可以参考这个函数重写。**为了维持库的完整性，我们不会直接在这个文件里面修改时钟配置函数。  **
 
 
 
-## STM32不同芯片之间UCOS移植
+## 标准库文件架构--应用文件（具体外设）
 
-### UCOS移植
+存放于Libraries\STM32F10x_StdPeriph_Driver  。官方写好，非常非常详细！
+
+这两个文件夹中，还有一个很特别的==**misc.c**== 文件，这个文件提供了外设对**内核中的 NVIC(中断向量控制器) 的访问函数（与前面的core_cm3.c相呼应）**，在配置中断时，我们必须把这个文件添加到工程中。  
 
 
 
-### 整体文件系统架构，各个文件作用
+
+## 标准库文件架构--接口文件（让库文件之间产生关联）
+
+文件目录： STM32F10x_StdPeriph_Lib_V3.5.0\Project\STM32F10x_StdPeriph_Template  
+
+### stm32f10x_it.c、 stm32f10x_conf.h 和 system_stm32f10x.c 
+
+stm32f10x_it.c：这个文件是专门用来编写中断服务函数的，在我们修改前，这个文件已经定义了一些系统异常 (特殊中断) 的接口，其它普通中断服务函数由我们自己添加。  （中断服务函数不可以自己随便命名）。
+
+system_stm32f10x.c：这个文件包含了 STM32 芯片上电后初始化系统时钟、扩展外部存储器用的函数。
+
+stm32f10x_conf.h：这个文件被包含进 stm32f10x.h 文件。当我们使用固件库编程的时候，如果需要某个外设的驱动库，就需要包含该外设的头文件： stm32f10x_ppp.h  ，这个文件方便了外设的添加与不添加。这个配置头文件统一管理这些外设的头文件。
+
+stm32f10x_conf.h 这个文件还可配置是否使用“断言”编译选项 ，高级用法，开发时可以用来做测试（待仔细研究）。
+
+
+![image-20210506200211913](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210506200230.png)
+
+# STM32不同芯片之间UCOS移植
+
+## UCOS移植
+
+
+
+## 整体文件系统架构，各个文件作用
 
