--- a/1-2 底层/单片机通用知识/移植.md
+++ b/1-2 底层/单片机通用知识/移植.md
@@ -1,5 +1,9 @@
 # STM32不同芯片之间裸机程序移植
 
+STM32F10X_MD, USE_STDPERIPH_DRIVER
+
+这两个宏分别在system_stm32f10x.c中和stm32f10x.h中定义，（STM32F10X_MD在两个文件中都有使用），更加方便移植。前者可以决定启动的相关配置，以及一些初始设置，后者决定stm32f10x_conf.h是否包含。
+
 
 ## 标准库文件架构--基础文件（启动等等）
 
@@ -8,7 +12,7 @@
 ### 内核相关文件
 
 **Core_cm3.h** 头文件里面实现了内核的寄存器映射，对应外设头文件 stm32f10x.h，区别就是一个针对内核的外设，一个针对片上
-（内核之外）的外设。**core_cm3.c** 文件实现了一下操作内核外设寄存器的函数，用的比较少。  
+（内核之外）的外设。**core_cm3.c** 文件实现了一下操作内核外设寄存器的函数，用的比较少。  这两个文件是ARM提供的，也算是CMSIS的一部分吧！！
 
 同时再core_cm3.h中有“stdint.h”这个头文件  ，主要作用是提供一些类型定义，所以这里面和C语言编译器是相通的。==**这些新类型定义屏蔽了在不同芯片平台时，出现的诸如 int 的大小是 16 位，还是 32 位的差异（这就是CMSIS的作用，屏蔽这种细节）**==。所以在我们以后的程序中，都将使用新类型如 uint8_t 、uint16_t 等。在稍旧版的程序中还经常会出现如 u8、 u16、 u32 这样的类型，分别表示的无符号的 8 位、 16 位、32 位整型。初学者碰到这样的旧类型感觉一头雾水，它们定义的位置在 STM32f10x.h 文件中。建议在以后的新程序中尽量使用 uint8_t 、 uint16_t 类型的定义。  
 
@@ -18,7 +22,7 @@
 
 ### Stm32f10x.h  
 
-片上外设的所以寄存器的映射，是一个非常重要的头文件，在内核中与之想对应的头文件是 core_cm3.h  
+片上外设的所以寄存器的映射，是一个非常重要的头文件，在内核中与之想对应的头文件是 core_cm3.h 。
 
 ### system_stm32f10x.c
 
@@ -30,7 +34,9 @@
 
 存放于Libraries\STM32F10x_StdPeriph_Driver  。官方写好，非常非常详细！
 
-这两个文件夹中，还有一个很特别的==**misc.c**== 文件，这个文件提供了外设对**内核中的 NVIC(中断向量控制器) 的访问函数（与前面的core_cm3.c相呼应）**，在配置中断时，我们必须把这个文件添加到工程中。  
+在头文件中：存放外设的初始化结构体，外设初始化结构体成员的参数列表，外设固件库函数的声明。
+
+这两个文件夹中，还有一个很特别的==**misc.c**== 文件，这个文件提供了外设对**内核中的 NVIC(中断向量控制器) 的访问函数（与前面的core_cm3.c相呼应，系统滴答定时器也是它提供）**，在配置中断时，我们必须把这个文件添加到工程中。  
 
 
 
