--- a/2-3 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
+++ b/2-3 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
@@ -1,6 +1,6 @@
-## 以下题目为精选2021届大厂嵌入式笔试题目
+# 以下题目为精选2021届大厂嵌入式笔试题目
 
-### **公司一（主要考察C和内存）：**
+## **公司一（主要考察C和内存）：**
 
 1、考察与或非，异或，运算符优先级：sum=a&b<<c+a^c,其中a=3,b=5,c=4（先加再移位再&再异或）答案4
 
@@ -81,7 +81,7 @@ int main(){
 
 
 
-### **公司二（主要考察C++和内存）：**
+## **公司二（主要考察C++和内存）：**
 
 1、一个类的友元函数可以访问该类的（D）
 
@@ -231,7 +231,7 @@ int main(){
 
 
 
-### **公司三（主要考察C、通信、Linux）：**
+## **公司三（主要考察C、通信、Linux）：**
 一、单选
 
 1、const  *  char  
@@ -286,7 +286,7 @@ unit8_t
 
 
 
-### **公司四（主要考察Linux、数据结构、面向对象编程思想、C++）：**
+## **公司四（主要考察Linux、数据结构、面向对象编程思想、C++）：**
 
 1、如果要在根目录运行程序，需要把路径设置到下面哪个环境变量中
 
@@ -331,7 +331,7 @@ unit8_t
 
 
 
-### **公司五（主要考察C基础）：**
+## **公司五（主要考察C基础）：**
 
 1、单片机程序存在哪里：D
 
@@ -376,3 +376,4 @@ const  int *  a
 输入abcba    返回true
 
 输入abc      返回flase
+
