--- a/2-3 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
+++ b/2-3 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
@@ -55,19 +55,43 @@ int main(){
 
 1、与或非，异或
 
+==异或相异为1==
+
 2、sizeof 结构体（在结构体中定义变量，考察int,char分配字节数和字节对齐）
+
+```c
+字节对齐的细节和具体编译器实现相关，但一般而言，满足三个准则：
+
+1. 结构体变量的首地址能够被其最宽基本类型成员的大小所整除；
+
+2. 结构体每个成员相对于结构体首地址的偏移量都是当前成员大小的整数倍，如有需要编译器会在成员之间加上填充字节；
+
+3. 结构体的总大小为结构体最宽基本类型成员大小的整数倍，如有需要编译器会在最末一个成员之后加上填充字节
+```
 
 3、结构体如何初始化变量
 
+==结构体定义时，没有分配内存，一般在声明结构体变量后，手工赋值。==
+
 4、sizeof 字符串，数组
+
+==得到字符串所占空间，通常\0会被考虑进去，如果数组初始化带有{”“}，则\0不会被考虑到实际占用空间中==
 
 5、strlen 字符串，数组
 
+==返回字符串的长度，自动忽略\0==
+
 6、sizeof 结构体
+
+根据编译器来定
 
 7、strncat函数，找出不合理和出错的地方
 
+
+
 8、查找0-100之间的素数
+
+
 
 四、编程题
 
