--- a/1-3 应用层/计算机&操作系统/RTOS/2-10 键盘任务设计.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2-10 键盘任务设计.md
@@ -1,10 +1,13 @@
 ## 任务设计注意点
 
-
+注意按键防抖!
 
 ## 菜单操作的监控流程
 
+### 架构
 
+对功能进行详细的划分，将紧密相关的功能分在一个菜单组。同时在设计之初，一定要将所有的各级菜单的内容相互规划好，这是监控程序设计的基础。
 
 ## 与显示任务的通信
 
+两次操作之间一般远大于显示任务更新画面所需的时间，采用消息邮箱完全可以满足键盘任务对更新画面面的需求。但是实际应用中，显示任务要服务众多任务，采用消息队列来接收各个任务的画面更新要求更加合理。
