--- a/1-3 应用层/计算机&操作系统/RTOS/2-11 显示任务设计.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2-11 显示任务设计.md
@@ -1,10 +1,13 @@
 ## 画面设计
 
-
+具体需要长时间积累
 
 ## 与其他任务通信
 
-
+最好创建一个显示任务，它接受各个任务提出的要求，逐一完成画面内容更新。这样能保证GUI的调用是可重入与互斥的。
 
 ## 短消息设计
 
+命令码用一个字节表示，可以定义256种显示操作，同时，可以使用消息队列，让命令码冒充消息，从而省去消息内容数组。
+
+![image-20210509095649480](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210509095651.png)
