--- a/1-3 应用层/计算机&操作系统/RTOS/2-9 串行通信任务的设计.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2-9 串行通信任务的设计.md
@@ -2,18 +2,44 @@
 
 ### 串口数据包的自定义
 
+一次通信过程的全部内容称为一个“通信帧”，这个需要我们自己设计。
+
+1. 起始码：一个或若干个特定字节组成，如果通信质量比较高或者通信帧内容较少，可以不设置起始码。
+2. 地址码：点对点不需要。
+3. 长度码：数据长度不确定时需要设计一个字节的长度码。
+4. 数据段：根据具体内容而定。
+5. 校验码。
+
 ### 设计的容错性
 
+**系统关中断最长事件大于相邻两次串行接收中断的事件间隔，可能会造成一次中断遗漏**
 
+**如果不是关中断时间过长，而是更高优先级的中断运行时间比接收中断间隔时间还长，也可能会造成一次数据遗漏**
 
 ## 数据发送任务设计
+
+**ISR和串行发送任务配合完成：串行发送任务得到ISR的信号量后将串行口发送中断功能关闭，即完成了这一帧的发送**
 
 
 
 ## 数据接收任务设计
 
+**设置一个帧缓冲区，在ISR中对其进行写入，在关联任务中对缓冲区进行读取，然后进行数据处理。注意对缓冲区的互斥访问措施。**
 
 
-## 收发任务设计！！
 
-### 任务中会触发的中断？
+## 收发任务设计（双向）！！
+
+### 任务中会触发的中断
+
+**串行中断服务程序只有一个，接收中断和发送中断共享一个中断通道号。**
+
+**发送中断：**存入“发送FIFO”中的数据全部发送完成，该缓冲处于空闲状态。
+
+**接收数据可用中断：**“接收FIFO”中的数据已经达到指定字节数，可从中读取指定字节数。
+
+**字符超时中断：**接收缓冲未满但又长时间没有接到数据，串口会自动产生超时中断。
+
+**可用超时中断配合信号量的超时参数，当接收到的数据稳定不变时就可以借宿接收过程，达到不用标志位就判断接收结束的效果。**
+
+![image-20210509094149758](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210509094159.png)
