--- a/2-3 嵌入式笔试面试系列/2-1 嵌入式高频面试题.md
+++ b/2-3 嵌入式笔试面试系列/2-1 嵌入式高频面试题.md
@@ -10,15 +10,27 @@
 
 4、liunx组成部分（我从启动流程解释）
 
+==？==
+
 5、说一下驱动框架
+
+==？==
 
 6、说一下IIC协议细节
 
+==IIC在SCK为高电平的时候，数据变化有效，当它为高时，SDA被拉低，则表示开始，SDA被拉高则表示停止，一次数据发送完成之后需要从机返回一个ASK，SDA被拉低表示应答，SDA保持高电平则非应答==
+
 7、介绍多进程
+
+==？==
 
 8、讲一个自己做的最成功的项目
 
+==振动检测==
+
 9、项目中遇到了什么难点
+
+==电池问题牵扯出来一些列BUG！！！==
 
 10、个人性格是怎样的
 
@@ -38,13 +50,19 @@
 
 2、冒泡排序，快速排序
 
+==快速排序？==
+
 3、数组对角线求和
+
+==？==
 
 4、将一个数拆分成三个数，求这三个数最大的乘积（动态规划）。扩展：拆分成n个数，其实有结论的，网上可以搜。最好拆分多个3。
 
+==动态规划？==
+
 5、给出日期，求是星期几（基姆拉尔森计算公式）
 
-
+==公式？==
 
 
 ## 公司二：
