--- a/3-2 面试准备/实习经历/振动检测器介绍.md
+++ b/3-2 面试准备/实习经历/振动检测器介绍.md
@@ -12,7 +12,17 @@
 
 ## 遇到的困难
 
-这个过程遇到了很多困难，后面回过头来看，小问题就不细说了，大问题归根结底都有一个源头。功耗与电池问题，最难的时候废寝忘食，连睡觉都在想项目的事，当时压力也比较大，是自己主动去争取这个项目来做的，不能砸在我手上。
+这个过程遇到了很多困难，后面回过头来看，小问题就不细说了，大问题归根结底都有一个源头。功耗与电池问题，做项目A 最难的时候废寝忘食，连睡觉都在想项目的事，当时压力也比较大，是自己主动去争取这个项目来做的，不能砸在我手上。
 
 因为之前和客户有过合作，之前给客户做的一个环境检测上报的系统，所以还是有很多参考资料。我们就延用了之前的一些设计，比如HC32最小系统板，电源通断控制电路。这里还用了之前的一个电池，er14505-2，也就是这个电池，是个坑。
+
+我分模块调试的程序，验证到加速度检测任务的时候，程序无法运行，进不去加速度采集任务，如果把时间片轮询关掉，就是不等待时间，直接运行任务又能跑通。这个非常奇怪，这期间调试了很多次，怀疑了很多地方，甚至考虑到I2C是不是没有做电平匹配等等。但是后面仔细一分析，怀疑是内存的问题，时间片的等待时间被莫名其妙的修改了，然后我大概知道问题在哪了，可能有数组溢出，在接收中断里有对全局数组的操作，于是我在进入数据采集任务的时候，加上了关中断。同时也设置了flag位，类似于UCOS中的互斥信号，对全局数组以及中断触发做了一个简单的保护，然后就好了。但是此时我还没搞明白，接收中断为什么被莫名的触发？
+
+然后又调试发送数据的模块，这里用电池供电怎么都跑不通，但是用稳压电源就能跑通，就是这里，我思考发现，一切的源头似乎是这个电池，这个电池让数据发送模块不能工作，同时影响到了其他模块的工作。为了验证我的猜想，我又去仔细查阅了数据发送模块的数据手册。（这里提一下，数据发送芯片有更换，客户要求做低功耗，想要用三年）。数据手册上写着，当模块电压在3.3V上下波动的时候，模块会重启。而手册上其他地方写着，模块开机会自动发送一些模块信息。我恍然大悟，和我猜的没错，然后我又用示波器去观察电池的电压变化，发送在运行发送任务的时候，电压被明显拉低，并且正好在3.3V上下波动。到这里，这个BUG的源头被解开了正是因为电池选型没选好，而且当时用的电池并不是全新的，导致电压会有一个波动，然后模块反复重启，一直触发接收中断，然后程序跑飞。
+
+到这里，这个BUG才算被完整的解开，现在仔细想想，如果前期只是一味的求快，不仔细验证每一步，后期肯定会有一个很大的BUG等着你。
+
+不得不提到这里的解决方法与电池选型，也经过了仔细斟酌才确定下来，才最终选择了ER14505+超级电容作为了解决方案。
+
+和硬件工程师仔细讨论，并且上网查阅资料，咨询电池原厂，经过了仔细地计算，选择了ER14505+超级电容供电，满足使用条件与大电流。
 
