--- a/2-1 C语言/2-5 队列.md
+++ b/2-1 C语言/2-5 队列.md
@@ -1,34 +1,50 @@
+## 定义
+
+队列：一种可以实现先进先出的存储结构。
+
+静态队列：使用数组实现
+
+动态队列：使用链表实现
+
 ## 静态队列为什么是循环队列
 
-
+节约空间，必须是环形。
 
 ## 循环队列需要几个参数来确定
 
-
+两个参数！front，rear。
 
 ## 循环队列各个参数的含义
 
+1. 队列初始化
 
+   front与rear的值都为0
+
+2. 队列非空
+
+   front代表当队列的头部元素
+
+   rear代表队尾的下一个元素
+
+3. 队列空
+
+   ​	front与rear的值相等，但不一定是0
 
 ## 循环队列入队伪算法
 
-**插入值时，队尾指针：r=(r+1)%数组的长度。**
-
-
+**插入值时，队尾指针：rear=(rear+1)%数组的长度。**
 
 ## 循环队列出队伪算法
 
-**出队时，队首指针：f=(f+1)%数组的长度。**
+**出队时，队首指针：front=(front+1)%数组的长度。**
 
 ## 如何判断循环队列为空
 
-
+如果front与rear的值相等，则为空。
 
 ## 如何判断循环队是否已满
 
-(r+1)%数组长度 == f
-
-
+(rear+1)%数组长度 == front
 
 ## 队列应用
 
