--- a/2-1 C语言/2-7 递归.md
+++ b/2-1 C语言/2-7 递归.md
@@ -5,6 +5,9 @@
 1. 通过运行时的堆栈实现
 2. 每次递归后因该越来越接近限制条件，我们要相信递归能正确执行
 3. 必须确保递归的可读性是能够弥补它的额外开销时才使用递归
+4. 这个转化必须是可解的
+
+循环和递归
 
 递归举例（字符串转换）
 
@@ -25,4 +28,38 @@ void binaryToAscii(unsigned int value,char ascii[])
   8     ascii[i++] = value % 10 +'0';
 
   9 }
+
+汉诺塔
+
+```c
+#include <stdio.h>
+ 
+void hannuota(int n,char A,char B,char C)
+{
+     if(n == 1)
+     {
+         printf("%d %c->%c\n",n,A,C);
+     }
+     else
+     {
+         hannuota(n-1,A,C,B);
+         printf("%d %c->%c\n",n,A,C);
+         hannuota(n-1,B,A,C);
+     }
+ }
+
+ void main()
+ {
+     char ch1 = 'A';
+     char ch2 = 'B';
+     char ch3 = 'C';
+
+     int n;
+
+     printf("请输入汉诺塔层数");
+     scanf("%d",&n);
+
+     hannuota(n,ch1,ch2,ch3);
+ }
+```
 
