--- a/1-3 应用层/计算机&操作系统/RTOS/2-6 数据通信.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2-6 数据通信.md
@@ -34,7 +34,7 @@
 
 **发送消息时：**把消息存入消息内容数组，调用发送消息函数时则将这条消息的地址告诉实时操作系统，操作系统则会把这个地址按照入队算法加入到消息指针数组中。
 
-**接收消息时：**操作系统按照出队算法从雄安锡指针数组中获得消息指针，用户再按照消息指针指针从消息内容数组中取出一条信息。
+**接收消息时：**操作系统按照出队算法从消息指针数组中获得消息指针，用户再按照消息指针指针从消息内容数组中取出一条信息。
 
 **实时操作系统的动态内存管理功能 可以用来管理消息内容数组。**（待仔细研究原理）
 
