--- a/1-3 应用层/计算机&操作系统/RTOS/2-9 串行通信任务的设计.md
+++ b/1-3 应用层/计算机&操作系统/RTOS/2-9 串行通信任务的设计.md
@@ -40,6 +40,6 @@
 
 **字符超时中断：**接收缓冲未满但又长时间没有接到数据，串口会自动产生超时中断。
 
-**可用超时中断配合信号量的超时参数，当接收到的数据稳定不变时就可以借宿接收过程，达到不用标志位就判断接收结束的效果。**
+**可用超时中断配合信号量的超时参数，当接收到的数据稳定不变时就可以结束接收过程，达到不用标志位就判断接收结束的效果。**
 
 ![image-20210509094149758](https://gitee.com/wang_chunfeng/pic-go/raw/master/img/20210509094159.png)
