--- a/2-1 C语言/2-9 树.md
+++ b/2-1 C语言/2-9 树.md
@@ -2,3 +2,68 @@
 
 1. 有且只有一个称为根的节点。
 2. 有若干个互不相交的子树，这些子树本身也是一棵树。
+
+**专业术语：**
+
+​		节点		父节点		子节点
+
+​		子孙		堂兄弟
+
+​		深度：
+
+​				从根节点到最底层节点的层数称之为深度，根节点是第一层
+
+​		叶子节点：
+
+​				没有子节点的节点
+
+​		非终端节点：
+
+​				实际就是非叶子节点
+
+​		度：
+
+​				子节点的个数称为度
+
+## 分类
+
+一般树：任意一个节点的子节点的个数都不受限制
+
+二叉树：任意一个节点的子节点的个数最多是两个，且子节点的位置不可更改
+
++ 细分：一般二叉树、满二叉树、完全二叉树
+  + 满二叉树：在不增加层数的情况下，不能再添加一个节点。
+  + 完全二叉树：如果只是删除了满二叉树最底层最右边的连续若干个节点，这样形成的二叉树是完全二叉树。
+
+森林：N个互不相交的树的集合
+
+## 树的存储
+
+### 二叉树的存储
+
++ 连续存储[完全二叉树]（线性结构）
+  + 转化为完全二叉树存储，以便还原原来的树的结构
+    + 存储优点：可以根据编号求出层数，知道父节点是谁，子节点是谁，有无子节点。
++ 链式存储
+  + 每一个节点分为三个部分，两个指向下一个节点，一个部分存放数据。
+
+
+
+### 普通树的存储
+
++ 双亲表示法
+
+  + 
+
++ 孩子表示法
+
++ 双亲孩子表示法
+
++ 二叉树表示法
+
+  
+
+### 森林的存储
+
+
+
