--- a/3-2 面试准备/基础知识/熟悉常用的外围接口.md
+++ b/3-2 面试准备/基础知识/熟悉常用的外围接口.md
@@ -12,7 +12,7 @@
 
 + 开始信号：SCL为高，SDA被拉低，然后SCL被拉低。
 + 停止信号：SCL为高，SDA被拉高，然后SCL被拉低。
-+ 应答信号：在第9个时钟信号，从设备拉低SDA表示应答；无应答则是从设备不动SDA，SDA为高。此时则会倒置通信结束或者设备重启。
++ 应答信号：在第9个时钟信号，从设备拉低SDA表示应答；无应答则是从设备不动SDA，SDA为高。此时则会导致通信结束或者设备重启。
 + 写数据：起始信号+等待响应+地址（附带读写方向，0表示写数据）+ 等待回复+一个字节的数据+等待回复...发送停止信号
 + 读数据：起始信号+等待响应+地址（附带读写方向，1表示读数据）+ 等待回复+一个字节的数据+发送应答...发送非应答，停止接收
 + 读写复合：包括两段起始信号。起始信号+等待响应+地址（写）+等待回复+数据（从机内部地址）+起始信号......
