--- a/2-1 C语言/2-9 树.md
+++ b/2-1 C语言/2-9 树.md
@@ -53,17 +53,29 @@
 
 + 双亲表示法
 
-  + 
+  + 结构体数组，左边存放值，右边存放父亲节点的下标。但是无法确定子节点的先后顺序，转为二叉树可解决此问题。
 
 + 孩子表示法
 
+  + 类似双亲，只不过右边存放一个指针，指向子节点形成的链表。
+
 + 双亲孩子表示法
+
+  + 结合双亲与孩子表示法
 
 + 二叉树表示法
 
-  
+  + 具体转换方法：
+
+    设法保证任意一个节点的左指针域指向它的第一个孩子，右指针域指向它的兄弟，只要满足此条件，就可以把一个普通树转化为二叉树。
+
+    一个普通树转化成的二叉树一定没有右子树
 
 ### 森林的存储
+
++ 先把森林转化为二叉树，再存储二叉树：
+
+  将相邻的父节点依次作为节点的右子树再对各父节点进行转化
 
 
 
