--- a/3-1 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
+++ b/3-1 嵌入式笔试面试系列/1-1 嵌入式笔试精选.md
@@ -87,7 +87,7 @@ int main(){
 
 7、strncat函数，找出不合理和出错的地方
 
-
+==将源字符串按照指定数粘贴到目标字符串后，并且自动添加上NULL==
 
 8、查找0-100之间的素数
 
@@ -100,6 +100,10 @@ int main(){
 输入 aaa;bbb;ccc 输出 aaa bbb ccc
 
 输入 ,hello,hello,, 输出 hello hello
+
+==a-z:    97-120==
+
+==A-Z:    65-93==
 
 2、双向链表的增删改查，以及逆序输出**（双向链表的增删改查是嵌入式必考题，必须熟练）**
 
