--- a/2-1 C语言/2-1 链表创建与遍历.md
+++ b/2-1 C语言/2-1 链表创建与遍历.md
@@ -1,3 +1,56 @@
+## 定义
+
+- 定义：n个节点离散分配，彼此通过指针相连，每个节点只有一个前驱节点同时每个节点只有一个后续节点，首节点没有前驱节点，尾节点没有后续节点。
+
+  > 专业术语
+  >
+  > - 首节点：存放第一个有效数据的节点
+  > - 尾节点：存放最后一个有效数据的节点
+  > - 头结点：位于首节点之前的一个节点，头结点并不存放有效的数据，加头结点的目的主要是为了方便对链表的操作
+  > - 头指针：指向头结点的指针变量
+  > - 尾指针：指向尾节点的指针变量
+
+- 确定一个链表需要几个参数：只需要一个头指针参数，因为我们通过头指针可以推算出链表的其他所有信息
+
+- 分类
+
+  - 单链表：每一个节点只有一个指针域
+
+  - 双链表：每一个节点有两个指针域
+
+  - 循环链表：能通过任何一个节点找到其他所有的节点
+
+  - 非循环链表：不能通过任何一个节点找到其他所有的节点
+
+    > 循环链表属于双链表的一种特殊形式，即循环链表是双链表的一个子集。
+
+- 优缺点
+
+  - 优点：空间没有限制，插入和删除元素很快
+  - 缺点：存取速度很慢
+
+- 算法
+
+  > 算法：
+  >
+  > - 侠义的算法是与数据的存储方式密切相关
+  > - 广义的算法是与数据的存储方式无关
+  >
+  > 泛型：利用某种技术达到的效果就是：不同的存储方式，执行的操作是一样的
+
+  - 遍历
+  - 查找
+  - 清空
+  - 销毁
+  - 求长度
+  - 排序
+  - 删除节点
+  - 插入节点
+
+
+
+## 链表创建与遍历
+
 ```c
 #include <stdio.h>
 #include "alloc.h"
@@ -83,13 +136,14 @@ bool is_empty(PNODE pHead)
 
 int length_list(PNODE pHead)
 {
-	int count = 0;
-	while(pHead->pNext != NULL)
-	{
-		count++;
-		pHead = pHead->pNext;
-	}		
-	return count;
+  int len = 0;
+  PNODE p = pHead->pNext;
+  while(NULL != p)
+  {
+      ++len;
+      p = p->pNext;
+  }
+  return len;
 }
 
 ```
