--- a/2-1 C语言/2-3 链表的插入和删除.md
+++ b/2-1 C语言/2-3 链表的插入和删除.md
@@ -5,14 +5,14 @@ typedef struct Node
 {
 	int data;
 	struct Node *pNext;
-}NODE,*PNODE;
+}NODE,* PNODE;
 
 bool insert_list(PNODE pHead,int pos,int val)
 {
     int i = 0;
     PNODE p = pHead;
     
-    while(NULL != p&&i<pos-1)
+    while(NULL != p&&i<pos-1)//这一段程序可以排除链表为空等所有异常情况，并且定位到要插入的地方
     {
         p = p->pNext;
         ++i;
