--- a/2-1 C语言/2-10 树的操作.md
+++ b/2-1 C语言/2-10 树的操作.md
@@ -34,7 +34,7 @@
   >
   >    例子：
   >
-  >    ```
+  >    ```c
   >            A
   >           / \
   >          B   C
@@ -56,15 +56,71 @@
   >
   >    例子：
   >
-  >    ```
+  >    ```c
   >            A
   >           / \
   >          B   C
   >         / \   \
   >        D   E    F
-  >       / \   \  / \
+  >       / \   \  / \c
   >      G   H   I J  k
   >    ```
   >
   >    后序遍历结果：GHDIEBJKFCA
 
+## 已知两种遍历序列求原始二叉树
+
+> 通过先序和中序或者中序和后序我们可以还原出原始二叉树，但是通过先序和后序是无法还原出原始二叉树；
+>
+> 换句话，只有通过先序和中序或者中序和后序，我们才可以唯一的确定一个二叉树。
+>
+> 例子1：
+>
+> ```c
+> 先序：ABCDEFGH
+> 中序：BDCEAFHG
+> 求后序？
+> 分析：按照先序的定义，A为最外层根节点，按照中序的定义和前面的结论可知BDCE为A节点的左子树节点，FHG为A节点的右子树，再依次按照两个遍历定义可以推出原始二叉树为：
+>         A
+>        / \
+>       B   F
+>         \  \
+>          C  G
+>         / \ /
+>        D  E H
+> 那么此二叉树的后序为：DECBHGFA
+> ```
+>
+> 例子2：
+>
+> ```c
+> 先序：ABDGHCEFI
+> 中序：GDHBAECIF
+> 求后序？
+> 分析：按照先序的定义得到A为最外层根节点，再根据中序结果可知GDHB为A的左子树，ECIF为A的右子树；B先出现在先序结果中可知B为左子树的根节点，再根据中序结果知B节点没有右子树，GDH均为B节点的左子树，再根据先序结果D先出现，知D为B左子树的根节点，再根据先序发现G在D的后面且中序中G在D的前面得出G为D左子树的根节点，那么D的右子树的根节点就是H了，依次类推A的右子树，得出原始二叉树为：
+>       A
+>      / \
+>     B   C
+>    /   / \
+>   D   E   F
+>  / \     /
+> G   H   I
+> 那么此二叉树的后序为：GHDBEIFCA
+> ```
+>
+> 例子3：
+>
+> ```c
+> 中序：BDCEAFHG
+> 后序：DECBHGFA
+> 求先序？
+> 分析：由后序结果知A为最外层根节点，再根据中序结果知BDCE为A节点的左子树，FHG为A的右子树；A的左子树中B最靠近A那么根据后序规则得出B为左子树的根节点，再根据中序结果B在结果的第一位，由中序规则知B没有左子树，DCE均为B的右子树，在DCE中后序结果C最靠近B，得出C为B的右子树的根节点，再依据中序结果知C前面是D后面是E得出D为C的左子树，E为C的右子树，同理可以推出A的右子树，得出原始二叉树为：
+>         A
+>        / \
+>       B   F
+>        \   \
+>         C   G
+>        / \  /
+>       D   E H
+> 那么此二叉树的先序为：ABCDEFGH
+> ```
