--- a/2-1 C语言/2. 数据结构/2-12 五种排序.md
+++ b/2-1 C语言/2. 数据结构/2-12 五种排序.md
@@ -4,3 +4,45 @@
 
 ### 1、冒泡排序
 
+```c
+//简单冒泡排序举例【升序】《郝斌数据结构》（初级版本，无法加入flag进行优化，没有两两对比的感觉，可看2-2的文件为更加正宗的冒泡）
+​
+# include <stdio.h>
+​
+void bubble_sort(int *,int);
+​
+int main(void)
+{
+    int i;
+    int len = 6;
+    int arr[len] = {2,10,8,5,3,1};
+
+    bubble_sort(arr,len);
+    for(i = 0;i < 6;i++)
+        printf("%d ",arr[i]);
+    printf("\n");
+    return 0;
+}
+​
+void bubble_sort(int * arr,int len)
+{
+    int i,j,t;
+    for(i = 0; i < len; i++)
+    {
+        for(j = i+1; j < len-1; j++)
+        {
+            if(arr[i] > arr[j])
+            {
+                t = arr[i];
+                arr[i] = arr[j];
+                arr[j] = t;
+            }
+        }
+    }
+}
+```
+
+## 选择排序
+
+
+
